# swc-plugin

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ___rust-toolchain.toml  build.rs  options.d.ts  options.js  options.test.js  package.json  readme.md  rust-toolchain.toml  skills-lock.json  tsconfig.json
crates/lingui_extractor/: Cargo.toml
crates/lingui_extractor/src/: lib.rs  message_extractor.rs  message_extractor_visitor.rs
crates/lingui_extractor/tests/: detect_parser_config.rs  message_extractor.rs
crates/lingui_extractor/tests/__snapshots__/: js-call-expression.js.json  js-message-descriptor.js.json  js-with-macros.js.json  jsx-with-macros.js.json  jsx-with-macros.jsx.json  jsx-without-macros.js.json  jsx-without-macros.jsx.json  jsx-without-trans.js.json  jsx-without-trans.jsx.json  with-sourcemaps.js.json
crates/lingui_extractor/tests/fixtures/: js-with-macros.js  jsx-with-macros.js
crates/lingui_extractor/tests/sourcemapped/: a.jsx  b.jsx  c.jsx  index.jsx
crates/lingui_macro/: Cargo.toml
crates/lingui_macro/src/: ast_utils.rs  builder.rs  generate_id.rs  js_macro_folder.rs  jsx_visitor.rs  lib.rs  macro_utils.rs  options.rs  tokens.rs
crates/lingui_macro/src/comment_directive/: mod.rs  source_scanner.rs  tests.rs
crates/lingui_macro/tests/: imports.rs  js_define_message.rs  js_t.rs  jsx.rs  jsx_icu.rs  jsx_named_placeholders.rs  labeled_expressions.rs  lingui_directive.rs  runtime_config.rs
crates/lingui_macro/tests/__swc_snapshots__/tests/imports.rs/: jsx_should_support_renamed_imports.js
crates/lingui_macro/tests/__swc_snapshots__/tests/js_define_message.rs/: should_expand_values.js  should_kept_only_essential_props.js  should_transform_define_message.js
crates/lingui_macro/tests/__swc_snapshots__/tests/js_icu.rs/: js_icu_diffrent_object_literal_syntax.js  js_plural_with_offset_and_exact_matches.js  js_should_not_touch_non_lungui_fns.js
crates/lingui_macro/tests/__swc_snapshots__/tests/js_t.rs/: js_continuation_character.js  js_should_kept_only_essential_props.js  js_should_not_touch_code_if_no_macro_import.js  js_should_not_touch_not_related_tagget_tpls.js  js_should_produce_all_fields_when_no_message_set.js  js_should_produce_all_fields_without_strip_flag.js  js_should_work_with_legacy_import.js  js_support_message_descriptor_in_t_fn.js  support_id_and_comment_in_t_macro_as_call_expression.js
crates/lingui_macro/tests/__swc_snapshots__/tests/jsx.rs/: elements_without_children.js  ignore_jsx_empty_expression.js  jsx_nested_labels.js  jsx_ph_labels.js  jsx_template_literal_in_children.js  jsx_values_dedup.js  jsx_with_context.js  keep_multiple_forced_newlines.js  non_breaking_whitespace_handling_2226.js  normalize_crlf_lf_cr.js  quoted_jsx_attributes_are_handled.js  strip_whitespace_around_arguments.js  strip_whitespace_around_tags_but_keep_forced_spaces.js
crates/lingui_macro/tests/__swc_snapshots__/tests/jsx_icu.rs/: jsx_icu_with_template_literal.js  jsx_multivelel_nesting.js  jsx_plural_preserve_reserved_attrs.js  jsx_trans_inside_plural.js  (+1 more)
crates/lingui_macro/tests/common/: mod.rs
crates/lingui_macro/tests/snapshots/: imports__js_should_process_only_elements_imported_from_macro.snap  imports__js_should_process_only_elements_imported_from_macro2.snap  imports__js_should_support_renamed_imports.snap  imports__jsx_should_process_only_elements_imported_from_macro.snap  imports__jsx_should_process_only_elements_imported_from_macro2.snap  imports__jsx_should_support_renamed_imports.snap  imports__should_add_imports_after_directive_prologues.snap  imports__should_add_not_clashing_imports.snap  imports__should_transform_custom_core_macro_package.snap  imports__should_transform_custom_jsx_macro_package.snap  imports__should_transform_messages_after_ts_module_declarations.snap  js_define_message__define_message_should_support_template_literal.snap  js_define_message__id_only_should_keep_only_id.snap  js_define_message__message_should_keep_message_and_context.snap  js_define_message__should_expand_macros.snap  js_define_message__should_expand_values.snap  js_define_message__should_preserve_custom_id.snap  js_define_message__should_transform_define_message.snap  js_icu__js_choices_may_contain_expressions.snap  js_icu__js_dedup_values_in_icu.snap  js_icu__js_icu_diffrent_object_literal_syntax.snap  js_icu__js_icu_macro.snap  js_icu__js_icu_nested_in_choices.snap  js_icu__js_icu_nested_in_t.snap  js_icu__js_plural_with_offset_and_exact_matches.snap  js_icu__js_plural_with_placeholders.snap  js_icu__js_should_not_touch_non_lungui_fns.snap  js_icu__js_should_not_treat_offset_in_select.snap  js_t__js_choice_labels_in_tpl_literal.snap  js_t__js_continuation_character.snap  js_t__js_custom_i18n_passed.snap  js_t__js_dedup_values_in_tpl_literal.snap  js_t__js_explicit_labels_in_tpl_literal.snap  js_t__js_id_only_should_keep_only_id.snap  js_t__js_message_should_keep_message_and_context.snap  js_t__js_newlines_are_preserved.snap  js_t__js_non_null_assertion_gets_named_placeholder.snap  js_t__js_ph_labels_in_tpl_literal.snap  js_t__js_satisfies_gets_named_placeholder.snap  js_t__js_should_not_touch_code_if_no_macro_import.snap  (+161 more)
napi-rs/: .gitattributes  Cargo.toml  binding.d.ts  binding.js  index.d.ts  index.js  index.ts  package.json  tsconfig.json
napi-rs/.github/workflows/: CI.yml
napi-rs/__test__/: index.spec.ts
napi-rs/__test__/__snapshots__/: index.spec.ts.snap
napi-rs/__test__/fixtures/: file1.js
napi-rs/src/: lib.rs
napi-rs/src-js/: index.ts
(+284 files in other folders)
