[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "6.4.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = false
opt-level = 3

[workspace.dependencies]
swc_core = { version = "66.0.3", default-features = false }
insta = { version = "1.47.2", features = ["serde"] }
