[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "lingui_extractor_swc"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
lingui_extractor = { path = "../crates/lingui_extractor" }
swc_core = { workspace = true, features = ["base_node", "swc_config"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.100"
rayon = "1.10"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
