[package]
name = "lingui_extractor"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
napi-derive = { version = "3.0.0", features = ["type-def"] }
napi = "3.8.3"
lingui_macro = { path = "../lingui_macro" }
data-encoding = "2.3.3"
serde = { version = "1.0.207", features = ["derive"] }
serde_json = "1.0.125"
swc_sourcemap = "10.0.2"
swc_core = { workspace = true, features = [
  "ecma_ast",
  "ecma_parser",
  "ecma_visit",
  "ecma_transforms",
  "common"
] }
