[package]
name = "lingui_macro"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
data-encoding = "2.11.0"
regex = "1.12.3"
sha2 = "0.11.0"
serde = "1.0.228"
serde_json = "1.0.150"
swc_core = { workspace = true, features = [
  "ecma_plugin_transform",
  "ecma_utils",
  "ecma_visit",
  "ecma_ast",
  "ecma_parser",
  "ecma_codegen",
  "common",
] }

[dev-dependencies]
insta = { workspace = true }
